--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>JSON Form Builder</title>
   <link rel="stylesheet" href="styles.css">
-
+  <script src="https://unpkg.com/json5@2/dist/index.min.js"></script>
   <script src="index.js" defer></script>
 </head>
 
